# SlimeCore2dSlimEdition

./: .gitignore  .gitmodules  README.md  Setup.bat
Project/: CMakeLists.txt  SlimeCore2D.sln
Project/Dependencies/: BuildDiligent.bat
Project/EngineManaged/: .editorconfig  EngineManaged.csproj  Entity.cs  GameHost.cs  Input.cs  Keycode.cs  Native.cs  ObjectManager.cs  ScriptRuntime.cs  SnakeGame.cs  UI.cs
Project/EngineManaged/Core/Grid/: GridSystem.cs
Project/EngineManaged/Core/Numeric/: Integrals.cs
Project/EngineManaged/Core/World/: WorldGenerator.cs
Project/EngineManaged/GameModes/: DudeGame.cs  IGameMode.cs  SnakeGame.cs
Project/EngineManaged/GameModes/Dude/: ContentRegistry.cs  DudeGame.cs  DudeStats.cs  GameEvents.cs  StateGameOver.cs  StateLevelUp.cs  StatePlaying.cs
Project/EngineManaged/GameModes/Factory/: FactoryGame.cs  FactoryResources.cs  FactorySettings.cs
Project/EngineManaged/GameModes/HeadsTails/: HeadsTailsGame.cs
Project/EngineManaged/GameModes/Idle/: IdleGame.cs  IdleResources.cs  IdleSaveState.cs
Project/EngineManaged/GameModes/Snake/: PlayerSnake.cs  SnakeGame.cs  SnakeSettings.cs
Project/EngineManaged/Interfaces/: IGameMode.cs
Project/EngineManaged/Source/Common/: BiDictionary.cs  Logger.cs
Project/EngineManaged/Source/Core/: GameManager.cs  GameMode.cs  IGameMode.cs  IGameState.cs  ISaveGame.cs  Logger.cs  SaveGame.cs
Project/EngineManaged/Source/Grid/: GridSystem.cs  Tile.cs
Project/EngineManaged/Source/Input/: IControllable.cs  Input.cs  Keycode.cs
Project/EngineManaged/Source/Interop/: Native.ConveyorMap.cs  Native.Core.cs  Native.Entity.cs  Native.Input.cs  Native.Memory.cs  Native.ObjectManager.cs  Native.Renderer.cs  Native.Resource.cs  Native.Scene.cs  Native.Text.cs  Native.TileMap.cs  Native.UI.cs
Project/EngineManaged/Source/Numeric/: Color.cs  Ease.cs  Floats.cs  Integrals.cs  Vec2.cs  Vec2i.cs  Vec3.cs  Vec3i.cs
Project/EngineManaged/Source/Rendering/: ParticleSystem.cs
Project/EngineManaged/Source/Scene/: Components.cs  Entity.cs  Scene.cs  SceneFactory.cs
Project/EngineManaged/Source/UI/: UIButton.cs  UIElement.cs  UIHelper.cs  UIImage.cs  UIInputHelper.cs  UILabel.cs  UIScrollPanel.cs  UISlider.cs  UISystem.cs  UIText.cs
Project/EngineManaged/Source/World/: Terrain.cs  WorldGenerator.cs
Project/SlimeCore2D/: AStar.cpp  AStar.h  CMakeLists.txt  Cell.cpp  Cell.h  Game2D.cpp  Game2D.h  GameObject.h  Node.cpp  Node.h  PhysicsScene.cpp  Player.cpp  Renderer2D.cpp  Renderer2D.h  RigidBody.cpp  RigidBody.h  SlimeCore2D.cpp  SlimeCore2D.vcxproj  SlimeCore2D.vcxproj.filters  Snake.cpp  Snake.h  Text.cpp  Text.h  cpp.hint
Project/SlimeCore2D/Engine/Core/: Camera.cpp  Camera.h  EngineSettings.cpp  EngineSettings.h  Input.cpp  Input.h  Keycode.h  Logger.cpp  Logger.h  Math.h  Memory.cpp  Memory.h  Window.cpp  Window.h
Project/SlimeCore2D/Engine/Entities/: Cell.h  GameObject.cpp  GameObject.h  Quad.cpp  Quad.h
Project/SlimeCore2D/Engine/Physics/: BoundingBox.cpp  BoundingBox.h  CollisionManager.cpp  PhysicsScene.cpp  PhysicsScene.h  RigidBody.cpp  RigidBody.h
Project/SlimeCore2D/Engine/Rendering/: ConveyorMap.cpp  ConveyorMap.h  Font.cpp  Font.h  ParticleSystem.cpp  ParticleSystem.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h  TileMap.cpp  TileMap.h  UIManager.cpp  UIManager.h
Project/SlimeCore2D/Engine/Resources/: ResourceManager.cpp  ResourceManager.h
Project/SlimeScriptingNative/: CMakeLists.txt  SlimeScriptingNative.cpp  SlimeScriptingNative.vcxproj  SlimeScriptingNative.vcxproj.filters  dllmain.cpp
Project/Txt/: HS.txt
(+136 files in other folders)
